--- a/Click2Mail/Click2Mail.vbproj
+++ b/Click2Mail/Click2Mail.vbproj
@@ -154,6 +154,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="utils.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frm_clicktomail.resx">
